fix: sort spacing on order summary component

--- a/order-summary-component/style.css
+++ b/order-summary-component/style.css
@@ -38,10 +38,18 @@ img {
 
 .summary {
   background-color: white;
-  text-align: center;
   max-width: 400px;
   overflow: hidden;
   border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.summary > * {
+  padding-bottom: 1rem;
 }
 
 .summary__title {
@@ -52,16 +60,18 @@ img {
 
 .summary__text {
   color: var(--desaturated-blue);
-  padding: 0 2rem;
+  padding: 0 2rem 1rem;
 }
 
 .plan {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: var(--very-pale-blue);
   margin: 0 2rem;
   padding: 0.75rem 0.75rem;
   border-radius: 0.5rem;
+  width: 100%;
 }
 
 .plan__text-wrapper {
@@ -75,6 +85,7 @@ img {
 
 .plan__price {
   color: var(--desaturated-blue);
+  margin-right: 4rem;
 }
 
 .plan__link {
@@ -96,6 +107,7 @@ img {
 }
 
 .summary__cancel {
+  display: block;
   text-decoration: none;
   font-weight: 700;
   color: var(--desaturated-blue);
